--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name : print geeting
-        run : echo "hello world"
+        run : |
+          echo "hello world"
+          echo "hello 2"
